--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.9",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
     "@types/pg": "^8.10.2",
@@ -36,6 +37,7 @@
     "bcrypt": "^5.1.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "sequelize": "^6.32.1"
