--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
