--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,14 +38,14 @@
     ],
     "import/no-extraneous-dependencies": "off",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-unused-vars": ["warn"],
     "semi": ["error", "always"],
     "arrow-parens": ["error", "as-needed"],
     "no-trailing-spaces": "error",
     "max-len": [
       "error",
       {
-        "code": 100,
+        "code": 110,
         "tabWidth": 2,  
         "ignoreComments": true,
         "ignoreStrings": true
