--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript",
   "version": "1.0.0",
-  "main": "./build/app.js",
+  "main": "./src/app.ts",
   "author": "Mayank Kathiriya",
   "license": "MIT",
   "scripts": {
